cambio de ubicacion el archivo script

--- a/porfolio.html
+++ b/porfolio.html
@@ -6,7 +6,6 @@
     <link rel="shortcut icon" href="./public/assets/images/icons8-código-fuente-48.png" type="image/x-icon" />
     <title>David Arrebola/Porfolio</title>
     <link rel="stylesheet" href="folioStyle.css" />
-    <script src="/porfolio.js" defer></script>
   </head>
   <body>
     <main>
@@ -62,5 +61,6 @@
         <a href="./contacto.html"> 👉 Contáctame</a>
       </footer>
     </main>
+    <script src="porfolio.js"></script>
   </body>
 </html>
